--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Mail.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -8,64 +9,61 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="pageMail" maxHeight="-Infinity"
-	maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-	prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css"
-	xmlns="http://javafx.com/javafx/11.0.1"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MailController">
+<AnchorPane fx:id="pageMail" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MailController">
 	<children>
 		<HBox layoutX="98.0" layoutY="25.0">
 			<children>
-				<Text strokeType="OUTSIDE" strokeWidth="0.0"
-					text=" Expéditeur :  " />
-				<TextField fx:id="expediteur" prefHeight="25.0"
-					prefWidth="180.0" />
+				<Text strokeType="OUTSIDE" strokeWidth="0.0" text=" Expéditeur :  ">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin></Text>
+				<TextField fx:id="expediteur" prefHeight="25.0" prefWidth="250.0" />
 			</children>
 		</HBox>
-		<Text layoutX="176.0" layoutY="71.0" scaleZ="0.8"
-			strokeType="OUTSIDE" strokeWidth="0.0"
-			text="Veuillez saisir les adresses mails séparés par &quot;,&quot;">
+		<Text layoutX="176.0" layoutY="71.0" scaleZ="0.8" strokeType="OUTSIDE" strokeWidth="0.0" text="Veuillez saisir les adresses mails séparés par &quot;,&quot;">
 			<font>
 				<Font size="10.0" />
 			</font>
 		</Text>
 		<HBox layoutX="82.0" layoutY="73.0">
 			<children>
-				<Text strokeType="OUTSIDE" strokeWidth="0.0"
-					text="Destinataire(s) : " />
-				<TextField fx:id="destinataires" prefHeight="25.0"
-					prefWidth="180.0" />
+				<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destinataire(s) : ">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin></Text>
+				<TextField fx:id="destinataires" prefHeight="25.0" prefWidth="250.0" />
 			</children>
 		</HBox>
 		<HBox layoutX="115.0" layoutY="111.0">
 			<children>
-				<Text strokeType="OUTSIDE" strokeWidth="0.0" text="En copie : " />
-				<TextField fx:id="destEnCopie" prefHeight="25.0"
-					prefWidth="180.0" />
+				<Text strokeType="OUTSIDE" strokeWidth="0.0" text="En copie : ">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin></Text>
+				<TextField fx:id="destEnCopie" prefHeight="25.0" prefWidth="250.0" />
 			</children>
 		</HBox>
 		<HBox layoutX="132.0" layoutY="149.0">
 			<children>
-				<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Objet : " />
-				<TextField fx:id="objetDuMail" prefHeight="25.0"
-					prefWidth="180.0" />
+				<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Objet : ">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin></Text>
+				<TextField fx:id="objetDuMail" prefHeight="25.0" prefWidth="250.0" />
 			</children>
 		</HBox>
 		<HBox layoutX="129.0" layoutY="189.0">
 			<children>
-				<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Corps : " />
-				<TextArea fx:id="corpsDuMail" prefHeight="115.0"
-					prefWidth="250.0" />
+				<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Corps : ">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin></Text>
+				<TextArea fx:id="corpsDuMail" prefHeight="115.0" prefWidth="300.0" />
 			</children>
 		</HBox>
-		<HBox layoutX="426.0" layoutY="352.0">
-			<children>
+		<HBox layoutX="426.0" layoutY="352.0" />
 				<!-- <Button mnemonicParsing="false" onAction="#annulerMail" text="Annuler" 
 					/> -->
-				<Button mnemonicParsing="false" onAction="#envoyerMail"
-					text="Envoyer" />
-			</children>
-		</HBox>
+				<Button layoutX="497.0" layoutY="349.0" mnemonicParsing="false" onAction="#envoyerMail" text="Envoyer" />
 	</children>
 </AnchorPane>
