Open Options au 1er démarrage + demande confirmation suppr responsable

--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/ItemResponsableOptions.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/ItemResponsableOptions.fxml
@@ -6,26 +6,18 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="30.0" minHeight="30.0"
-	prefHeight="30.0" prefWidth="238.0" stylesheets="@../style.css"
-	xmlns="http://javafx.com/javafx/11.0.1"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemResponsableOptionsController">
+<AnchorPane maxHeight="30.0" minHeight="30.0" prefHeight="30.0" prefWidth="290.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemResponsableOptionsController">
 	<children>
-		<ScrollPane maxHeight="47.0" minHeight="30.0"
-			prefHeight="47.0" prefWidth="206.0">
+		<ScrollPane maxHeight="47.0" minHeight="30.0" prefHeight="30.0" prefWidth="252.0">
 			<content>
-				<AnchorPane prefHeight="25.0" prefWidth="204.0">
+				<AnchorPane prefHeight="25.0" prefWidth="250.0">
 					<children>
-						<Label fx:id="adresseMailResponsable" layoutX="1.0"
-							layoutY="3.0" prefHeight="19.0" text="pifwej@ejrer" />
+						<Label fx:id="adresseMailResponsable" layoutX="1.0" layoutY="3.0" prefHeight="19.0" text="pifwej@ejrer" />
 					</children>
 				</AnchorPane>
 			</content>
 		</ScrollPane>
-		<Button layoutX="209.0" mnemonicParsing="false"
-			onAction="#supprimerResponsable" prefHeight="29.0" prefWidth="29.0"
-			text="-" />
+		<Button layoutX="256.0" mnemonicParsing="false" onAction="#supprimerResponsable" prefHeight="29.0" prefWidth="29.0" text="-" />
 	</children>
 	<opaqueInsets>
 		<Insets bottom="1.0" />
