--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Options.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Options.fxml
@@ -10,13 +10,13 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.OptionsController">
 	<children>
 		<TextField fx:id="textFieldCheminDossierOM" layoutX="258.0" layoutY="60.0" maxWidth="-Infinity" prefHeight="25.0" prefWidth="210.0" />
-		<Label layoutX="18.0" layoutY="65.0" prefHeight="19.0" prefWidth="240.0" text="Chemin vers les ordres de mission :" />
+		<Label layoutX="18.0" layoutY="65.0" prefHeight="19.0" prefWidth="240.0" text="Chemin vers vos missions :" />
 		<Button layoutX="491.0" layoutY="60.0" mnemonicParsing="false" onAction="#choisirCheminDossierMission" text="..." />
 		<Button layoutX="266.0" layoutY="352.0" mnemonicParsing="false" onAction="#sauvegarder" text="Sauvegarder vos options" />
 		<Label layoutX="19.0" layoutY="178.0" prefHeight="19.0" prefWidth="240.0" text="Modifier vos coordonnées :" />
 		<Button layoutX="258.0" layoutY="173.0" mnemonicParsing="false" onAction="#modifierAgent" text="Modifier" />
 		<TextField fx:id="textFieldCheminSignature" layoutX="258.0" layoutY="119.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="210.0" />
-		<Label layoutX="19.0" layoutY="124.0" prefHeight="19.0" prefWidth="240.0" text="Chemin votre signature :" />
+		<Label layoutX="19.0" layoutY="124.0" prefHeight="19.0" prefWidth="240.0" text="Chemin vers votre signature :" />
 		<Button layoutX="493.0" layoutY="121.0" mnemonicParsing="false" onAction="#choisirCheminSignature" text="..." />
 		<Label layoutX="19.0" layoutY="229.0" prefHeight="19.0" prefWidth="240.0" text="Votre adresse mail :" />
 		<TextField fx:id="textFieldMailAgent" layoutX="258.0" layoutY="224.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="210.0" />
