--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/ItemResponsableOptions.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/ItemResponsableOptions.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="30.0" minHeight="30.0" prefHeight="30.0" prefWidth="290.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemResponsableOptionsController">
+<AnchorPane maxHeight="30.0" minHeight="30.0" prefHeight="30.0" prefWidth="290.0" stylesheets="@../style.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemResponsableOptionsController">
 	<children>
 		<ScrollPane maxHeight="47.0" minHeight="30.0" prefHeight="30.0" prefWidth="252.0">
 			<content>
