--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/choixMailsDestinataires.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/choixMailsDestinataires.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="227.0" prefWidth="355.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.choixMailsDestinatairesController">
+<AnchorPane prefHeight="227.0" prefWidth="355.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.choixMailsDestinatairesController">
    <children>
       <ScrollPane fx:id="scrollMails" layoutX="12.0" layoutY="7.0" prefHeight="161.0" prefWidth="332.0">
          <content>
