--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ListeMissionsResponsable.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ListeMissionsResponsable.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane minWidth="-Infinity" prefHeight="550.0"
-	prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
+	prefWidth="600.0"
 	xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ListeMissionsResponsableController">
 	<children>
