--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ItemMissionResponsable.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ItemMissionResponsable.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -9,55 +8,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="itemMission" onMouseClicked="#choisirMission"
-	prefHeight="100.0" prefWidth="597.0"
-	style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
-	stylesheets="@../style.css"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ItemMissionResponsableController">
+<VBox fx:id="itemMission" onMouseClicked="#choisirMission" prefHeight="100.0" prefWidth="505.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ItemMissionResponsableController">
 	<children>
-		<GridPane alignment="CENTER" prefHeight="99.0"
-			prefWidth="597.0">
+		<GridPane alignment="CENTER" prefHeight="75.0" prefWidth="505.0">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="165.0" prefWidth="165.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="175.0" prefWidth="175.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="165.0" prefWidth="165.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<Button alignment="CENTER" mnemonicParsing="false"
-					onAction="#afficherPDF" prefWidth="77.0" text="Afficher"
-					GridPane.rowIndex="1">
-					<GridPane.margin>
-						<Insets left="55.0" />
-					</GridPane.margin>
-				</Button>
-				<Button fx:id="boutonEnvoyer" alignment="CENTER"
-					disable="true" mnemonicParsing="false" prefHeight="27.0"
-					prefWidth="81.0" text="Envoyer" GridPane.columnIndex="2"
-					GridPane.rowIndex="1">
-					<GridPane.margin>
-						<Insets left="55.0" />
-					</GridPane.margin>
-				</Button>
-				<Button fx:id="boutonSigner" alignment="CENTER"
-					contentDisplay="CENTER" mnemonicParsing="false" prefHeight="27.0"
-					prefWidth="81.0" text="Signer" GridPane.columnIndex="1"
-					GridPane.rowIndex="1">
-					<GridPane.margin>
-						<Insets left="55.0" />
-					</GridPane.margin>
-				</Button>
-				<Label fx:id="lieuLabel" prefHeight="25.0" prefWidth="195.0"
-					text="Limoges">
+				<Label fx:id="lieuLabel" prefHeight="25.0" prefWidth="195.0" text="Limoges">
 					<padding>
 						<Insets left="10.0" />
 					</padding>
@@ -65,9 +28,7 @@
 						<Font size="13.0" />
 					</font>
 				</Label>
-				<Label fx:id="nomLabel" alignment="CENTER_RIGHT"
-					prefHeight="25.0" prefWidth="194.0" text="Jacques DELARUE"
-					GridPane.columnIndex="2">
+				<Label fx:id="nomLabel" alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="194.0" text="Jacques DELARUE" GridPane.columnIndex="2">
 					<font>
 						<Font size="13.0" />
 					</font>
@@ -75,9 +36,7 @@
 						<Insets right="15.0" />
 					</GridPane.margin>
 				</Label>
-				<Label fx:id="datesLabel" alignment="CENTER" prefHeight="25.0"
-					prefWidth="345.0" text="Du 12/00/0000 au 00/00/0000"
-					GridPane.columnIndex="1">
+				<Label fx:id="datesLabel" alignment="CENTER" prefHeight="25.0" prefWidth="345.0" text="Du 12/00/0000 au 00/00/0000" GridPane.columnIndex="1">
 					<font>
 						<Font size="13.0" />
 					</font>
