--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ListeMissionsResponsable.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/ListeMissionsResponsable.fxml
@@ -6,23 +6,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minWidth="-Infinity" prefHeight="550.0"
-	prefWidth="600.0"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ListeMissionsResponsableController">
+<AnchorPane minWidth="-Infinity" prefHeight="550.0" prefWidth="525.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.ListeMissionsResponsableController">
 	<children>
-		<VBox minWidth="-Infinity" prefHeight="550.0" prefWidth="600.0">
+		<VBox minWidth="-Infinity" prefHeight="550.0" prefWidth="525.0">
 			<children>
-				<Label alignment="CENTER" prefHeight="50.0" prefWidth="600.0"
-					text="Liste des missions à signer" textAlignment="CENTER">
+				<Label alignment="CENTER" prefHeight="50.0" prefWidth="525.0" text="Liste des missions à signer" textAlignment="CENTER">
 					<font>
 						<Font name="System Bold" size="18.0" />
 					</font>
 				</Label>
-				<ScrollPane hbarPolicy="NEVER" prefHeight="475.0"
-					prefWidth="600.0">
+				<ScrollPane hbarPolicy="NEVER" prefHeight="475.0" prefWidth="525.0">
 					<content>
-						<VBox fx:id="listeOmVBox" prefWidth="300.0" />
+						<VBox fx:id="listeOmVBox" prefWidth="525.0" />
 					</content>
 				</ScrollPane>
 			</children>
