--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/RootLayout.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/RootLayout.fxml
@@ -11,16 +11,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="650.0" prefWidth="1200.0"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.RootLayoutController">
+<BorderPane prefHeight="650.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.RootLayoutController">
 	<top>
-		<HBox prefHeight="100.0" prefWidth="200.0"
-			style="-fx-border-color: Gainsboro; -fx-border-width: 0 0 1 0; -fx-background-color: Gainsboro;"
-			BorderPane.alignment="CENTER">
+		<HBox prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: Gainsboro; -fx-border-width: 0 0 1 0; -fx-background-color: Gainsboro;" BorderPane.alignment="CENTER">
 			<children>
-				<ImageView fx:id="banniereCarsat" fitHeight="69.0"
-					fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+				<ImageView fx:id="banniereCarsat" fitHeight="69.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
 					<viewport>
 						<Rectangle2D height="69.0" width="200.0" />
 					</viewport>
@@ -38,98 +33,77 @@
 						<Insets top="40.0" />
 					</HBox.margin>
 				</Label>
+            <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label fx:id="prenomNomAgent" text="Prénom NOM">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
 			</children>
 		</HBox>
 	</top>
 	<left>
 		<GridPane fx:id="gridRoot" BorderPane.alignment="CENTER">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="350.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					minWidth="10.0" prefWidth="150.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					prefWidth="550.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="350.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+				<ColumnConstraints hgrow="SOMETIMES" prefWidth="550.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
-				<VBox fx:id="boxMenu" prefHeight="200.0" prefWidth="150.0"
-					style="-fx-border-color: grey;" stylesheets="@../menu.css"
-					GridPane.columnIndex="1">
+				<VBox fx:id="boxMenu" prefHeight="200.0" prefWidth="150.0" style="-fx-border-color: grey;" stylesheets="@../menu.css" GridPane.columnIndex="1">
 					<children>
-						<VBox id="hov" fx:id="boxOM"
-							onMouseClicked="#afficherOrdresMission" prefHeight="100.0"
-							prefWidth="150.0"
-							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
-							stylesheets="@../hover.css">
+						<VBox id="hov" fx:id="boxOM" onMouseClicked="#afficherOrdresMission" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../hover.css">
 							<children>
-								<ImageView fx:id="imageOM" fitHeight="40.0"
-									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+								<ImageView fx:id="imageOM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
 									<VBox.margin>
 										<Insets left="55.0" top="10.0" />
 									</VBox.margin>
 								</ImageView>
-								<Label alignment="CENTER" prefHeight="65.0"
-									prefWidth="150.0" text="Ordres de mission">
+								<Label alignment="CENTER" prefHeight="65.0" prefWidth="150.0" text="Ordres de mission">
 									<padding>
 										<Insets bottom="15.0" top="15.0" />
 									</padding>
 								</Label>
 							</children>
 						</VBox>
-						<VBox id="hov" fx:id="boxFM"
-							onMouseClicked="#afficherFraisMission" prefHeight="100.0"
-							prefWidth="150.0"
-							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
-							stylesheets="@../hover.css">
+						<VBox id="hov" fx:id="boxFM" onMouseClicked="#afficherFraisMission" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../hover.css">
 							<children>
-								<ImageView fx:id="imageFM" fitHeight="40.0"
-									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+								<ImageView fx:id="imageFM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
 									<VBox.margin>
 										<Insets left="55.0" top="10.0" />
 									</VBox.margin>
 								</ImageView>
-								<Label alignment="CENTER" prefHeight="59.0"
-									prefWidth="150.0" text="Frais de mission">
+								<Label alignment="CENTER" prefHeight="59.0" prefWidth="150.0" text="Frais de mission">
 									<padding>
 										<Insets bottom="15.0" top="15.0" />
 									</padding>
 								</Label>
 							</children>
 						</VBox>
-						<VBox id="hov" fx:id="boxHT"
-							onMouseClicked="#afficherHorairesTravail" prefHeight="100.0"
-							prefWidth="150.0"
-							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
-							stylesheets="@../hover.css">
+						<VBox id="hov" fx:id="boxHT" onMouseClicked="#afficherHorairesTravail" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../hover.css">
 							<children>
-								<ImageView fx:id="imageHT" fitHeight="40.0"
-									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+								<ImageView fx:id="imageHT" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
 									<VBox.margin>
 										<Insets left="55.0" top="10.0" />
 									</VBox.margin>
 								</ImageView>
-								<Label alignment="CENTER" prefHeight="60.0"
-									prefWidth="150.0" text="Horaires de travail" />
+								<Label alignment="CENTER" prefHeight="60.0" prefWidth="150.0" text="Horaires de travail" />
 							</children>
 						</VBox>
-						<VBox id="hov" fx:id="boxParam"
-							onMouseClicked="#modifierOptions" prefHeight="100.0"
-							prefWidth="150.0"
-							style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;"
-							stylesheets="@../hover.css">
+						<VBox id="hov" fx:id="boxParam" onMouseClicked="#modifierOptions" prefHeight="100.0" prefWidth="150.0" style="-fx-border-color: grey; -fx-border-width: 0 0 1 0;" stylesheets="@../hover.css">
 							<children>
-								<ImageView fx:id="imageParametre" fitHeight="40.0"
-									fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+								<ImageView fx:id="imageParametre" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
 									<VBox.margin>
 										<Insets left="55.0" top="10.0" />
 									</VBox.margin>
 								</ImageView>
-								<Label alignment="CENTER" prefHeight="64.0"
-									prefWidth="150.0" text="Paramètres" />
+								<Label alignment="CENTER" prefHeight="64.0" prefWidth="150.0" text="Paramètres" />
 							</children>
 						</VBox>
 					</children>
