--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/Mail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/responsable/view/Mail.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.MailController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="525.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.responsable.view.MailController">
 	<children>
 		<HBox layoutX="98.0" layoutY="25.0">
 			<children>
@@ -64,6 +64,6 @@
 		<HBox layoutX="426.0" layoutY="352.0" />
 				<!-- <Button mnemonicParsing="false" onAction="#annulerMail" text="Annuler" 
 					/> -->
-				<Button layoutX="497.0" layoutY="349.0" mnemonicParsing="false" onAction="#envoyerMail" text="Envoyer" />
+				<Button layoutX="400.0" layoutY="349.0" mnemonicParsing="false" onAction="#envoyerMail" text="Envoyer" />
 	</children>
 </AnchorPane>
